# paroquia-financeiro

./: .gitignore  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
public/: print.html
scripts/: instalar-mac.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: AppSidebar.tsx  ContextPanel.tsx  ItemDetailPanel.tsx  SectionHeader.tsx  StatCard.tsx  WorkspaceHeader.tsx  index.ts
src/core/auth/: permissions.test.ts  permissions.ts
src/core/components/: DocumentHeader.tsx  FielSelector.tsx  FontSelector.tsx  MaskedInputs.tsx  ModeToggle.tsx  PagedPreview.tsx  RichTextEditor.tsx
src/core/config/: constants.ts
src/core/database/: connection.ts  foreignKeys.ts  index.ts  indexes.ts  migration.ts  migrations.ts  schema.ts  syncPreparation.ts  triggers.ts  types.ts  validator.ts
src/core/hooks/: useCrud.ts  useTheme.ts
src/core/repository/: BaseRepository.ts  pastoral.repository.ts
src/core/services/: auditoria.service.ts  backup.service.ts  fiel.service.ts  fielProfile.service.ts  relatorio.service.ts  sync.service.ts
src/core/types/: app.types.ts  entities.ts
src/core/ui/: AppLogo.tsx  ErrorBoundary.tsx  (+5 more)
src/design/: colors.ts  index.ts  shadows.ts  spacing.ts  theme.ts  typography.ts
src/layouts/: MacOSWorkspaceLayout.tsx  WorkspaceContext.tsx
(+36 files in other folders)
