[package]
name = "paroquia-app"
version = "1.6.0"
description = "Sistema de Gestao Paroquial - Area Missionaria Nossa Senhora da Esperanca"
authors = ["Pe. Éder de Souza Gomes Cordeiro"]
edition = "2021"

[lib]
name = "paroquia_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Plugin SQL unificado
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
font-kit = "0.14.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
